@@ -317,7 +317,11 @@ static void load_materials(void)
 	    mt->value = value;
 	}
     }
-    mt->next = NULL;
+    if (mt->next)
+    {
+        free(mt->next);
+    	mt->next = NULL;
+    }
     LOG(llevDebug, "Done.\n");
     fclose(fp);
 }
