@@ -22,9 +22,12 @@ common/utils.c: apply patch #1445892 (transmute_materialname crash) courtesy
 include/spellist.h: disable big unused arrays, legacy of spell code.
 server/c_object.c: merge find_best_apply_object_match and find_best_object_match
  which are really the same.
+server/init.c: fix memory leak.
 server/monster.c: fix a monster/scroll related crash, based on patch #1447242 by
  the cf.schmorp.de development team.
+server/player.c: fix monitor_spells not initalized (before InitConnection()).
 server/skills.c: fix merging bug with inscription.
+socket/init.c: fix monitor_spells not being initialized.
 Ryo 2006-03-14
 
 Fix bug/exploit in setup command.  We were strcat'ing back data provided
